--- a/Backend/templates/updatePassword.ejs
+++ b/Backend/templates/updatePassword.ejs
@@ -59,32 +59,14 @@
 <body>
 
     <div class="email-wrapper">
-
         <div class="email-header">
-            <h1>Welcome to Attuned Pathways</h1>
-        </div>
-        
+            <h1>You've changed password.</h1>
+        </div>    
         <div class="email-body">
-        <p>Hello <%= fullname %>,</p>
-        <p>Your login credentials:</p>
-        <p>StaffID: <%= staffID %></p>
-        <p>Password: <%= password %></p>
-        
-        <h3>Note:</h3>
-
-        <p>Please find the attached document containing instructions to help you use the system.</p>
+        <p>Your password have been updated successfully.</p>
+        <p>New Password: <%= password %>,</p>    
         <p>Please Keep this credentials privately. Don't share with Anyone</p>
-        <p>If you did not register for a Attuned Pathways account, Please ignore this email</p>
-    
-        </div>
-        
-        
-        <div class="email-footer">
-            <p>If you have any questions, please don't hesitate to contact us at <a href="mailto:jameskagunga2020@gmail.com">Support@attunedPathways.com</a></a></p>
-        </div>
-
-    </div>
-
-    
+        </div>    
+   </div>    
 </body>
 </html>
