--- a/Frontend/src/components/footer/footer.css
+++ b/Frontend/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  height: auto;
+  height: 300px;
   bottom: 0px;
   background-color: #aaa;
 }
@@ -10,19 +10,22 @@
   align-items: center;
   justify-content: space-evenly;
   margin: 0% 5%;
-  padding: 10px;
+  padding: 20px;
 }
 
 .address,
 .logo,
 .right {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 @media only screen and (max-width: 768px) {
   .footer-container {
     flex-direction: column; /* Stack items vertically on smaller screens */
-    text-align: left; /* Center text in each column */
+    justify-content: center;
+     /* Center text in each column */
   }
  .address,
   .logo,
