--- a/Frontend/src/pages/shift/shift.css
+++ b/Frontend/src/pages/shift/shift.css
@@ -1,7 +1,7 @@
 .shift{
     margin: 3% 10%;
     display: flex;  
-    height: auto;
+    height: 200%;
 }
 .shift_details{
     flex: 1;
@@ -141,9 +141,16 @@ strong{
         margin: 0%;
         display: flex;
         flex-direction: column;
+        height: 500px;
     }
     .shift_casenotes{
-        height: 400px;
-        padding: 20px;
+       
+        padding: 30px 20px 100px 20px;
+    }
+
+    .shift_details{
+        
+        margin: 0px 20px;
+        
     }
   }
