--- a/Admin/src/pages/user/user.css
+++ b/Admin/src/pages/user/user.css
@@ -28,6 +28,8 @@
 .userShow {
   flex: 1;
   padding: 20px;
+  height: auto;
+  
   -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
 }
@@ -151,4 +153,21 @@
     background-color: darkblue;
     color: white;
     font-weight: 600;
+}
+
+.doc{
+  display: flex;
+  align-items: center;
+
+  width: 70%;
+  text-align: left;
+}
+
+.documents{
+  font-weight: 900;
+}
+
+.visibility_icon{
+  margin-right: 20px;
+  cursor: pointer;
 }
