--- a/Admin/src/pages/user/user.css
+++ b/Admin/src/pages/user/user.css
@@ -171,3 +171,23 @@
   margin-right: 20px;
   cursor: pointer;
 }
+
+.reset{
+  display: flex;
+  flex-direction: column;
+}
+.reset-input{
+  margin: 10px 0px;
+  padding: 10px;
+  outline: none;
+  width: 150px;
+}
+
+.reset-button{
+  padding: 10px;
+  background-color: rgb(234, 70, 70);
+  cursor: pointer;
+  color: white;
+  border: none;
+  width: 150px;
+}
