--- a/Backend/templates/updatePassword.ejs
+++ b/Backend/templates/updatePassword.ejs
@@ -64,7 +64,8 @@
         </div>    
         <div class="email-body">
         <p>Your password have been updated successfully.</p>
-        <p>New Password: <%= password %>,</p>    
+        <p>New Password: <%= password %></p>    
+        <span>You maybe required to login into your account change password</span>
         <p>Please Keep this credentials privately. Don't share with Anyone</p>
         </div>    
    </div>    
