--- a/Admin/src/pages/productList/productList.css
+++ b/Admin/src/pages/productList/productList.css
@@ -29,3 +29,52 @@
     color: red;
     cursor: pointer;
 }
+
+
+.modal{
+    position: absolute;
+    top: 100px;
+    right: 0;
+    height: 60%;
+    width: 60%;
+    background-color: #fff;
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .modal-header{
+    display: flex;
+    margin: 20px;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 900;
+  }
+  
+  .cancel-delete{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+  }
+  
+  .cancel-delete button{
+    margin: 20px;
+    border: none;
+    background-color: teal;
+    color: #fff;
+    cursor: pointer;
+    padding: 10px;
+    width: 100px;
+  }
+  
+  .cancel-delete button:nth-child(2){
+    margin: 20px;
+    border: none;
+    background-color: red;
+    color: #fff;
+    cursor: pointer;
+    padding: 10px;
+    width: 100px;
+  }
