--- a/Backend/templates/ShiftAssignment.ejs
+++ b/Backend/templates/ShiftAssignment.ejs
@@ -75,7 +75,7 @@
         <p>notes: <%= notes %></p>
         </div>    
         <div class="email-footer">
-            <p>If you have any questions, please don't hesitate to contact us at <a href="mailto:jameskagunga2020@gmail.com">Support@becodemy.com</a></a></p>
+            <p>If you have any questions, please don't hesitate to contact us at <a href="mailto:attunedpathways@outlook.com">attunedpathways@outlook.com</a></a></p>
         </div>
     </div>   
 </body>
