--- a/Backend/templates/announcement.ejs
+++ b/Backend/templates/announcement.ejs
@@ -67,12 +67,10 @@
         <div class="email-body">
         <p><%= description %>,</p>
         
-    
         </div>
         
-        
         <div class="email-footer">
-            <p>If you have any questions, please don't hesitate to contact us at <a href="mailto:jameskagunga2020@gmail.com">Support@attunedPathways.com</a></a></p>
+            <p>If you have any questions, please don't hesitate to contact us at <a href="mailto:attunedpathways@outlook.com">attunedpathways@outlook.com</a></a></p>
         </div>
 
     </div>
