--- a/Backend/templates/welcome.ejs
+++ b/Backend/templates/welcome.ejs
@@ -70,6 +70,8 @@
         <p>StaffID: <%= staffID %></p>
         <p>Password: <%= password %></p>
         
+        <p>To login go to: <a href="https://www.aimtasker.com/login">https://www.aimtasker.com/login</a></p>
+        
         <h3>Note:</h3>
 
         <p>Please find the attached document containing instructions to help you use the system.</p>
