--- a/Backend/templates/welcome.ejs
+++ b/Backend/templates/welcome.ejs
@@ -77,12 +77,9 @@
         <p>Please find the attached document containing instructions to help you use the system.</p>
         <p>Please Keep this credentials privately. Don't share with Anyone</p>
         <p>If you did not register for a Attuned Pathways account, Please ignore this email</p>
-    
         </div>
-        
-        
         <div class="email-footer">
-            <p>If you have any questions, please don't hesitate to contact us at <a href="mailto:jameskagunga2020@gmail.com">Support@attunedPathways.com</a></a></p>
+            <p>If you have any questions, please don't hesitate to contact us at <a href="mailto:attunedpathways@outlook.com">attunedpathways@outlook.com</a></a></p>
         </div>
 
     </div>
