--- a/Admin/src/pages/product/product.css
+++ b/Admin/src/pages/product/product.css
@@ -89,7 +89,7 @@
 
   margin-top: 40px;
   overflow-y: scroll;
-  height: 200px;
+  height: 500px;
 }
 
 .productInfoBottom ul{
@@ -251,5 +251,18 @@ th{
   padding: 10px;
   font-weight: 900;
   font-size: 15px;
+}
+
+.date-range input{
+  margin: 0px 10px;
+  padding: 5px;
+}
+
+.date-range button{
+  background-color: teal;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
 }
 
