--- a/Admin/src/pages/user/user.css
+++ b/Admin/src/pages/user/user.css
@@ -8,7 +8,16 @@
   align-items: center;
   justify-content: space-between;
 }
-
+.delete-btn{
+  width: 80px;
+  border: none;
+  padding: 5px;
+  background-color: red;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+  font-size: 16px;
+}
 .userAddButton {
   width: 80px;
   border: none;
